--- a/index.html
+++ b/index.html
@@ -115,15 +115,25 @@
                 <div class="about-text" data-aos="fade-right">
                     <h3 class="about-subtitle">Nossa História e Missão</h3>
                     <p class="about-paragraph">
-                        Fundada em 2008, a Auditec nasceu da visão de revolucionar o mercado de
-                        segurança patrimonial através da tecnologia. Somos especialistas em desenvolver
-                        e instalar cofres de alta segurança que combinam robustez física com
-                        inteligência digital.
+                        A Auditec Serviços surgiu a partir de uma realização e capacitação profissional, com foco
+                        principal em oferecer qualidade e segurança patrimonial por meio da tecnologia. Fundada pelo Sr.
+                        Auditônio Monteiro, a empresa nasceu ao identificar a escassez de mão-de-obra especializada na
+                        região Norte.
                     </p>
                     <p class="about-paragraph">
-                        Nossa missão é proporcionar tranquilidade absoluta aos nossos clientes,
-                        oferecendo soluções que vão além da simples proteção física, integrando
-                        tecnologias avançadas como biometria, IoT e criptografia militar.
+                        Com “visão de águia”, a Auditec sempre enxergou além do óbvio, agindo com firmeza diante de
+                        desafios. Suas atividades começaram em 2011, no Norte do país, e em 2015 a empresa se expandiu
+                        para atender clientes em todo o Brasil.
+                    </p>
+                    <p class="about-paragraph">
+                        Através da experiência direta com o cliente (“in loco”), formamos uma equipe altamente
+                        qualificada para oferecer um leque completo de serviços em cofres e portas especiais, atuando em
+                        reparos e manutenções nos mais diversos modelos.
+                    </p>
+                    <p class="about-paragraph">
+                        Entre os anos de 2016 e 2024, atingimos os maiores números de clientes atendidos em nossa
+                        trajetória, consolidando nossa reputação como referência em soluções de segurança física no
+                        Brasil.
                     </p>
 
                     <!-- Mission Statement -->
@@ -139,35 +149,7 @@
                 <!-- Right Content -->
                 <div class="about-image" data-aos="fade-left">
                     <div class="company-display">
-                        <div class="company-icons">
-                            <div class="company-icon">
-                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10" />
-                                </svg>
-                            </div>
-                            <div class="company-icon">
-                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <path d="M21.5 2v6h-6M2.5 22v-6h6m13-10L2.5 16m0-14l19 10" />
-                                </svg>
-                            </div>
-                            <div class="company-icon">
-                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2" />
-                                    <circle cx="9" cy="7" r="4" />
-                                    <path d="M22 21v-2a4 4 0 0 0-3-3.87" />
-                                    <path d="M16 3.13a4 4 0 0 1 0 7.75" />
-                                </svg>
-                            </div>
-                            <div class="company-icon">
-                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <circle cx="12" cy="12" r="10" />
-                                    <circle cx="12" cy="12" r="6" />
-                                    <circle cx="12" cy="12" r="2" />
-                                </svg>
-                            </div>
-                        </div>
-                        <p class="company-title">Auditec</p>
-                        <p class="company-subtitle">Excelência em Segurança</p>
+                        
                     </div>
                 </div>
             </div>
