Ajuste de layout - 24-06-2025

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta name="description" content="Especialistas em cofres residenciais.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -149,7 +151,7 @@
                 <!-- Right Content -->
                 <div class="about-image" data-aos="fade-left">
                     <div class="company-display">
-                        
+
                     </div>
                 </div>
             </div>
@@ -644,8 +646,8 @@
                             </div>
                             <div class="contact-details">
                                 <h4>Telefone</h4>
-                                <p>(11) 3456-7890</p>
-                                <p>(11) 98765-4321</p>
+                                <p>Direção: (92) 99522-1694</p>
+                                <p>Comercial: (92) 3611-4486 / 99291-5552</p>
                             </div>
                         </div>
 
@@ -659,8 +661,7 @@
                             </div>
                             <div class="contact-details">
                                 <h4>E-mail</h4>
-                                <p>contato@Auditec.com.br</p>
-                                <p>vendas@Auditec.com.br</p>
+                                <p>comercial@auditecbrasil.com</p>
                             </div>
                         </div>
 
@@ -673,8 +674,8 @@
                             </div>
                             <div class="contact-details">
                                 <h4>Endereço</h4>
-                                <p>Av. Paulista, 1234 - Sala 567</p>
-                                <p>São Paulo, SP - CEP: 01310-100</p>
+                                <p>Rua Kumamoto, 14 – Parque 10</p>
+                                <p>CEP: 69054-309 – Manaus/AM</p>
                             </div>
                         </div>
 
@@ -778,13 +779,7 @@
                 <!-- Company Info -->
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <svg class="footer-shield" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                            stroke-width="2">
-                            <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10" />
-                        </svg>
-                        <span class="footer-logo-text">
-                            Secure<span class="footer-logo-highlight">Tech</span>
-                        </span>
+                        <img src="./assets/img/logo.png" alt="logotigo auditec" width="100px">
                     </div>
                     <p class="footer-description">
                         Especialistas em soluções de segurança tecnológica, oferecendo
@@ -853,21 +848,10 @@
                         <div class="footer-contact-item">
                             <svg class="footer-contact-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                                 stroke-width="2">
-                                <path
-                                    d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
-                            </svg>
-                            <div>
-                                <p>(11) 3456-7890</p>
-                                <p>(11) 98765-4321</p>
-                            </div>
-                        </div>
-                        <div class="footer-contact-item">
-                            <svg class="footer-contact-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                stroke-width="2">
                                 <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
                                 <polyline points="22,6 12,13 2,6" />
                             </svg>
-                            <p>contato@Auditec.com.br</p>
+                            <p>comercial@auditecbrasil.com</p>
                         </div>
                         <div class="footer-contact-item">
                             <svg class="footer-contact-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
@@ -876,8 +860,19 @@
                                 <circle cx="12" cy="10" r="3" />
                             </svg>
                             <div>
-                                <p>Av. Paulista, 1234 - Sala 567</p>
-                                <p>São Paulo, SP - CEP: 01310-100</p>
+                                <p>Rua Kumamoto, 14 – Parque 10</p>
+                                <p>CEP: 69054-309 – Manaus/AM</p>
+                            </div>
+                        </div>
+                        <div class="footer-contact-item">
+                            <svg class="footer-contact-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <path
+                                    d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
+                            </svg>
+                            <div>
+                                <p>Direção: (92) 99522-1694</p>
+                                <p>Comercial: (92) 3611-4486 / 99291-55521</p>
                             </div>
                         </div>
                     </div>
